fix page-content overflow-y issue;

--- a/frontend/src/app/components/layout/page-frame/page-frame.component.scss
+++ b/frontend/src/app/components/layout/page-frame/page-frame.component.scss
@@ -2,9 +2,18 @@
 
 .content-container{
   width: 100%;
+  max-height: 100vh;
    
   display: flex;
   justify-content: center;
+
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar{
+    display: none;
+  }
 }
 
 .page-container{
